--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -40,7 +40,7 @@
                     <form class="form" method="post" action="comment/" id="form-comment-id">
                         {% csrf_token %}
                         <div class="form-group">
-                            <textarea id="text-comment" class="form-control input-block-level" name="text-comment" rows="3" style="resize: none;"></textarea>
+                            <textarea id="text-comment" class="form-control input-block-level" name="text-comment" required rows="3" style="resize: none;"></textarea>
                         </div>
                         <div class="form-group text-right">
                             <button id="submit-comment" type="submit" class="btn btn-success">Send</button>
@@ -97,7 +97,7 @@
                 <i class="fa fa-calendar-o fa-2x"> {{ trip.endDate }}</i>
             </div>
             <div class="well">
-                <i class="fa fa-star fa-2x text-left"> <small>{% firstof trip.rating '-' %}</small> / <strong>10</strong></i>
+                <a class="fa fa-star fa-2x text-left" data-toggle="modal" style="text-decoration: None" data-target="#myModal"> <small>{% firstof trip.rating '-' %}</small> / <strong>10</strong></a>
                 <br>
                 <br>
                 {% if user.is_anonymous %}
@@ -117,6 +117,8 @@
                         <a href="/judge/{{trip.scorable_ptr_id}}/0">
                             <i class="fa fa-thumbs-o-down fa-2x text-right"> {{trip.dislikes}} dislikes</i>
                         </a>
+                        <br>
+                        <br>
                     {% elif judge.like == True %}
                         <a href="/judge/{{trip.scorable_ptr_id}}/1">
                             <i class="fa fa-thumbs-up fa-2x text-left"> {{trip.likes}} likes</i>
@@ -135,10 +137,39 @@
                         <a href="/judge/{{trip.scorable_ptr_id}}/0">
                             <i class="fa fa-thumbs-down fa-2x text-right"> {{trip.dislikes}} dislikes</i>
                         </a>
+                        <br>
+                        <br>
                     {% endif %}
                 {% endif %}
-
+            </div>
+            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="myModalLabel">Rate this trip</h4>
+                  </div>
+                  <div class="modal-body">
+                    <form class="form" method="post" action="rate/" id="form-rate-id">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <p>Please choose a number between 0 and 10:</p>
+                            <input type="number" name="rate-value" min="0" max="10" required/>
+                            <p>Please, write a fancy description:</p>
+                            <textarea id="text-comment" class="form-control input-block-level" name="text-rate-description" rows="3" required maxlength="255" style="resize: none;"></textarea>
+                        </div>
+                        <div class="modal-footer">
+                            <div class="form-group">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button id="submit-comment" type="submit" class="btn btn-success">Send</button>
+                                <input type="hidden" name="trip-id" value="{{trip.id}}"/>
+                            </div>
+                         </div>
+                    </form>
+                  </div>
                 </div>
+              </div>
+            </div>
             <div class="well">
                 <form id="stateSelectForm" class="form-horizontal" action="/administrator/trip/update/" method="post">
                     {% csrf_token %}
