Añadida i18n corregido link erroneo fechas formateadas añadido un metodo (comentado, en Coinview) de como podemos obtener si es usuario o admin

--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -47,7 +47,7 @@
                         </li>
                     {% else %}
                         <li style="text-decoration: None">
-                            <a id="sign_ind_nav" href="/Trip/list">List my trips</a>
+                            <a id="sign_ind_nav" href="/Trip/MyList">List my trips</a>
                         </li>
 
                         <li style="text-decoration: None">
