--- a/principal/templates/signin.html
+++ b/principal/templates/signin.html
@@ -27,12 +27,6 @@
                     <span>Don't have an account? <a href="#" data-toggle="modal" data-target="#registerModal">Create one now</a></span>
                 </form>
             </div>
-            
-            <div>
-            	{%for error in form.error%}
-            		<li>{{error}}</li>
-            	{%endfor%}
-            </div>
         </div>
     </div>
     
@@ -44,8 +38,7 @@
 		        <h4 class="modal-title" id="myModalLabel">Registration</h4>
 		      </div>
 		      <div class="modal-body">
-				<form class="form-horizontal" action="/register_traveller/" id="traveller-registration" method="post">
-                {% csrf_token %}
+				<form class="form-horizontal" action="/register_traveller/" id="traveller-registration" name="traveller-registration" method="post">
 				<div class="form-group">
 				    <label for="name" class="col-sm-2 control-label">Name</label>
 				    <div class="col-sm-10">
@@ -59,7 +52,7 @@
 				    </div>
 				  </div>
 				    <div class="col-sm-offset-2 col-sm-10">
-				      <button type="submit" class="btn btn-default btn-lg btn-block" id="singUp-button">Sign up</button>
+				      <button type="submit" class="btn btn-default btn-lg btn-block" id="singUp-button" name="singUp-button">Sign up</button>
 				    </div>
 				  </div>
 				  <div class="form-group">
