Solucion de conflictos

--- a/principal/templates/profile_edit_password.html
+++ b/principal/templates/profile_edit_password.html
@@ -1,28 +1,64 @@
 {% extends 'base.html' %}
-{% block title %} Change password {% endblock %}
+{% block title %} Edit Password {% endblock %}
 {% block content %}
-<form data-toggle="validator" role="form" action="/profile/edit/password/" method="post">
-    {% csrf_token %}
-
-    {% for field in form.visible_fields %}
-        <div id="div_{{ field.html_name }}" class="col-xs-6col-md-6 form-group{% if field.errors %} has-error{% endif %}">
-            {{ field.label_tag }}
-            {{ field }}
-            <div class="text-muted pull-right">
-                <small>{{ field.help_text }}</small>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 .col-sm-6 .col-md-8">
+            <div class="well panel panel-default">
+                <h1 class="page-header">Edit Password</h1>
+                <div class="panel-body">
+                    <div class="row">
+                        <form class="form-horizontal" role="form" action="/profile/edit/password/" method="post" data-toggle="validator"  enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <!-- left column -->
+                            <div class="col-md-4 col-sm-6 col-xs-8">
+                                <div class="text-center">
+                                    <i class="fa fa-key fa-5x"></i>
+                                </div>
+                            </div>
+                            <!-- edit form column -->
+                            <div class="col-md-5 col-sm-6 col-xs-8 personal-info">
+                                    <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
+                                        <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">Old password:</label>
+                                        <input class="form-control" id="id_old_password" maxlength="30" name="old_password" type="password" required/>
+                                        <div class="help-block with-errors">
+                                            {{ form.visible_fields.0.errors }}
+                                        </div>
+                                    </div>
+                                    <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
+                                        <label for="id_{{ form.visible_fields.1.html_name }}" class="control-label">New password:</label>
+                                        <input class="form-control" id="id_password" maxlength="30" name="password" type="password" required/>
+                                        <div class="help-block with-errors">
+                                            {{ form.visible_fields.1.errors }}
+                                        </div>
+                                    </div>
+                                    <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %} ">
+                                        <label for="id_{{ form.visible_fields.2.html_name }}" class="control-label">Repeat new password:</label>
+                                        <input class="form-control" type="password" id="id_password_repeat" maxlength="30" name="password_repeat"  data-match="#id_password" data-match-error="Whoops, these don't match" required/>
+                                        <div class="help-block with-errors">
+                                            {{ form.visible_fields.2.errors }}
+                                        </div>
+                                    </div>
+                                    {% for hidden in form.hidden_fields %}
+                                        {{ hidden }}
+                                    {% endfor %}
+                                    <div class="form-group">
+                                        <input class="btn btn-primary" value="Save Changes" type="submit">
+                                        <span></span>
+                                        <a href="/profile/{% if form.initial|length != 0 %}{{ form.initial.id }}{% else %}{{ form.data.id }}{% endif %}" class="btn btn-default">CANCEL</a>
+                                    </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!--/row-->
+                </div>
+                <!--/panel-body-->
             </div>
-            <div class="help-block">
-                {{ field.errors }}
-            </div>
+            <!--/panel-->
         </div>
-    {% endfor %}
-
-    {% for hidden in form.hidden_fields %}
-        {{ hidden }}
-    {% endfor %}
-
-    <div class="form-group">
-        <input type="submit" value="Change" class="btn btn-primary"/>
+        <!--/col-->
     </div>
-</form>
+    <!--/row-->
+</div>
+<!--/container-->
 {%endblock%}
