--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -18,6 +18,7 @@
     <script src="{% static "js/sweet-alert.min.js" %}"></script>
     <script src="{% static "js/countUp.min.js" %}"></script>
     <script src="{% static "js/main.js" %}"></script>
+    <script src="{% static "js/validator.js" %}"></script>
     {% block extrahead %} {% endblock %}
 </head>
 {% autoescape on %}
