--- a/principal/templates/profile_details.html
+++ b/principal/templates/profile_details.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="row">
-        <div class="col-md-8 col-xs-10">
+        <div class="col-xs-12 .col-sm-6 .col-md-8">
             <div class="well panel panel-default">
                 <h1 class="page-header">Profile</h1>
                     <div class="panel-body">
@@ -51,12 +51,6 @@
                             <p><small>Trips</small></p>
                             <a href="/Trip/MyList/" class="btn btn-info btn-block"><span class="fa fa-plus-circle"></span> My Trips </a>
                         </div>
-                        <!--/col-->
-{#                        <div class="col-xs-12 col-sm-4">#}
-{#                            <h2><strong>43</strong></h2>#}
-{#                            <p><small>Snippets</small></p>#}
-{#                            <button type="button" class="btn btn-primary btn-block"><span class="fa fa-gear"></span> Options </button>#}
-{#                        </div>#}
                         <!--/col-->
                     </div>
                     <!--/row-->
