--- a/principal/templates/profile_edit.html
+++ b/principal/templates/profile_edit.html
@@ -1,126 +1,78 @@
 {% extends 'base.html' %}
-{% block title %} Profile edit {% endblock %}
+{% block title %} Edit Profile {% endblock %}
 {% block content %}
-<form data-toggle="validator" role="form" action="/profile/edit/" method="post">
-    {% csrf_token %}
-
-    {% for field in form.visible_fields %}
-        <div id="div_{{ field.html_name }}" class="col-xs-6col-md-6 form-group{% if field.errors %} has-error{% endif %}">
-            {{ field.label_tag }}
-            {{ field }}
-            <div class="text-muted pull-right">
-                <small>{{ field.help_text }}</small>
-            </div>
-            <div class="help-block">
-                {{ field.errors }}
-            </div>
-        </div>
-    {% endfor %}
-
-    {% for hidden in form.hidden_fields %}
-        {{ hidden }}
-    {% endfor %}
-    {% csrf_token %}
-
-    <div class="form-group">
-        <input type="submit" value="Save Profile" class="btn btn-primary"/>
-    </div>
-
-
-</form>
-
-
-
-<div class="container" style="padding-top: 60px;">
-    <h1 class="page-header">Edit Profile</h1>
+<div class="container">
     <div class="row">
-        <!-- left column -->
-        <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="text-center">
-            <img src="http://lorempixel.com/200/200/people/9/" class="avatar img-circle img-thumbnail" alt="avatar">
-            <h6>Upload a different photo...</h6>
-            <input type="file" class="text-center center-block well well-sm">
+        <div class="col-xs-12 .col-sm-6 .col-md-8">
+            <div class="well panel panel-default">
+                <h1 class="page-header">Edit Profile</h1>
+                <div class="panel-body">
+                    <div class="row">
+                        <form class="form-horizontal" role="form" action="/profile/edit/" method="post" data-toggle="validator"  enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <!-- left column -->
+                            <div class="col-md-4 col-sm-6 col-xs-8">
+                                <div class="form-group {% if form.visible_fields.3.errors %} has-error {% endif %} ">
+                                    <div class="text-center ">
+                                        {% if traveller.photo == None %}
+                                            <img src="/static/user_folder/default.jpg" alt="" class="center-block img-circle img-thumbnail img-responsive" width="200">
+                                        {% else %}
+                                            <img src="/static/user_folder/{{traveller.photo}}" alt="" class="center-block img-circle img-thumbnail img-responsive" width="200">
+                                        {% endif %}
+                                        <h6>Upload a different photo...</h6>
+                                    </div>
+                                    <label for="id_{{ form.visible_fields.3.html_name }}" class="control-label"></label>
+                                    <div>
+                                        {{ form.visible_fields.3 }}
+                                    </div>
+                                    <div class="help-block with-errors">
+                                        {{ form.visible_fields.3.errors }}
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- edit form column -->
+                            <div class="col-md-5 col-sm-6 col-xs-8 personal-info">
+                                    <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %} ">
+                                        <label for="id_{{ form.visible_fields.0.html_name }}" class="control-label">First name:</label>
+                                        <input class="form-control" id="id_first_name" name="first_name" type="text" value="{% if form.initial|length != 0 %}{{ form.initial.first_name }}{% else %}{{ form.data.first_name }}{% endif %}" required/>
+                                        <div class="help-block with-errors">
+                                            {{ form.visible_fields.0.errors }}
+                                        </div>
+                                    </div>
+                                    <div class="form-group {% if form.visible_fields.1.errors %} has-error {% endif %} ">
+                                        <label for="id_{{ form.visible_fields.1.html_name }}" class="control-label">Last name:</label>
+                                        <input class="form-control" id="id_last_name" name="last_name" type="text" value="{% if form.initial|length != 0 %}{{ form.initial.last_name }}{% else %}{{ form.data.last_name }}{% endif %}" required/>
+                                        <div class="help-block with-errors">
+                                            {{ form.visible_fields.1.errors }}
+                                        </div>
+                                    </div>
+                                    <div class="form-group {% if form.visible_fields.2.errors %} has-error {% endif %}">
+                                        <label for="id_{{ form.visible_fields.2.html_name }}" class="control-label">Genre:</label>
+                                        {{ form.visible_fields.2 }}
+                                        <div class="help-block with-errors">
+                                            {{ form.visible_fields.2.errors }}
+                                        </div>
+                                    </div>
+                                    {% for hidden in form.hidden_fields %}
+                                        {{ hidden }}
+                                    {% endfor %}
+                                    <div class="form-group">
+                                        <input class="btn btn-primary" value="Save Changes" type="submit">
+                                        <span></span>
+                                        <a href="/profile/{% if form.initial|length != 0 %}{{ form.initial.id }}{% else %}{{ form.data.id }}{% endif %}" class="btn btn-default">CANCEL</a>
+                                    </div>
+                            </div>
+                        </form>
+                    </div>
+                    <!--/row-->
+                </div>
+                <!--/panel-body-->
             </div>
+            <!--/panel-->
         </div>
-        <!-- edit form column -->
-        <div class="col-md-8 col-sm-6 col-xs-12 personal-info">
-            <div class="alert alert-info alert-dismissable">
-                <a class="panel-close close" data-dismiss="alert">×</a>
-                <i class="fa fa-coffee"></i>
-                This is an <strong>.alert</strong>. Use this to show important messages to the user.
-            </div>
-            <h3>Personal info</h3>
-            <form class="form-horizontal" role="form" action="/profile/edit/" method="post">
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">First name:</label>
-                    <div class="col-lg-8">
-                        Jane
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Last name:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" value="Bishop" type="text">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Company:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" value="" type="text">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Email:</label>
-                    <div class="col-lg-8">
-                        <input class="form-control" value="janesemail@gmail.com" type="text">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-lg-3 control-label">Time Zone:</label>
-                    <div class="col-lg-8">
-                        <div class="ui-select">
-                            <select id="user_time_zone" class="form-control">
-                                <option value="Hawaii">(GMT-10:00) Hawaii</option>
-                                <option value="Alaska">(GMT-09:00) Alaska</option>
-                                <option value="Pacific Time (US &amp; Canada)">(GMT-08:00) Pacific Time (US &amp; Canada)</option>
-                                <option value="Arizona">(GMT-07:00) Arizona</option>
-                                <option value="Mountain Time (US &amp; Canada)">(GMT-07:00) Mountain Time (US &amp; Canada)</option>
-                                <option value="Central Time (US &amp; Canada)" selected="selected">(GMT-06:00) Central Time (US &amp; Canada)</option>
-                                <option value="Eastern Time (US &amp; Canada)">(GMT-05:00) Eastern Time (US &amp; Canada)</option>
-                                <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Username:</label>
-                    <div class="col-md-8">
-                        <input class="form-control" value="janeuser" type="text">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Password:</label>
-                    <div class="col-md-8">
-                        <input class="form-control" value="11111122333" type="password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-3 control-label">Confirm password:</label>
-                    <div class="col-md-8">
-                        <input class="form-control" value="11111122333" type="password">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-md-3 control-label"></label>
-                    <div class="col-md-8">
-                        <input class="btn btn-primary" value="Save Changes" type="button">
-                        <span></span>
-                        <input class="btn btn-default" value="Cancel" type="reset">
-                    </div>
-                </div>
-            </form>
-        </div>
+        <!--/col-->
     </div>
+    <!--/row-->
 </div>
-
+<!--/container-->
 {%endblock%}
