Pago de paquetes de monedas mediante paypal implementado. Para poder realizar el pago, es necesario exponer localhost a internet. Para ello, podeis utilizar "ngrok" y cambiar las urls correspondientes en "CoinViews". Antes de poder utilizar el servicio PayPal, es necesario vovler a migrar la base de datos para que se creen las tablas necesarias para las notificaciones IPN de paypal.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -387,3 +387,89 @@ img {
     -ms-filter: alpha(opacity=60);
     filter: alpha(opacity=60);
 }
+
+//CSS DE BUY_COINS
+.pricing {
+  @include translate(-49%, -49.1%);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 310px;
+  font-size: 0;
+  opacity: 1;
+  transition: opacity .2s ease;
+}
+
+.price-option {
+  display: inline-block;
+  width: 24em;
+  vertical-align: middle;
+  margin-right: 0.3125em;
+  font-size: 16px;
+  opacity: 1;
+  transition: opacity .2s ease;
+}
+
+.price-option:last-child { margin-right: 0; }
+
+.pricing:hover .price-option { opacity: 0.6; }
+.pricing:hover .price-option:hover { opacity: 1; }
+
+.price-option__detail {
+  padding: 2em 0;
+  background: white;
+  text-align: center;
+}
+
+.price-option--low .price-option__detail  { border-radius: .25em 0 0 0; }
+.price-option--mid .price-option__detail  { padding: 2.3em 0; border-radius: .25em .25em 0 0; }
+.price-option--high .price-option__detail { border-radius: 0 .25em 0 0; }
+
+.price-option__cost,
+.price-option__type {
+  display: block;
+}
+
+.price-option__cost {
+  font-size: 1.5em;
+  color: #383838;
+}
+
+.price-option__type {
+  font-size: .7em;
+  text-transform: uppercase;
+  color: #909090;
+}
+
+.price-option__purchase {
+  position: relative;
+  display: block;
+  padding: .6em;
+  font-size: .875em;
+  font-weight: bold;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: rgba(0,0,0,0.6);
+}
+
+.price-option--low .price-option__purchase  { background: #a7d155; border-radius: 0 0 0 .25em; }
+.price-option--mid .price-option__purchase  { background: #eada42; border-radius: 0 0 .25em .25em; }
+.price-option--high .price-option__purchase { background: #e54e4b; border-radius: 0 0 .25em 0; }
+
+.price-option__purchase:before {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  display: block;
+  width: 0;
+  height: 0;
+  margin-left: -5px;
+  border-width: 0 5px 5px;
+  border-style: solid;
+}
+
+.price-option--low .price-option__purchase:before  { border-color: transparent transparent #a7d155; }
+.price-option--mid .price-option__purchase:before  { border-color: transparent transparent #eada42; }
+.price-option--high .price-option__purchase:before { border-color: transparent transparent #e54e4b; }
