--- a/principal/templates/base.html
+++ b/principal/templates/base.html
@@ -46,6 +46,10 @@
                             <a id="sign_ind_nav" href="/signin">Sign In</a>
                         </li>
                     {% else %}
+                    	<li style="text-decoration: None">
+                            <a id="sign_ind_nav" href="/buy_coins">Buy Coins</a>
+                        </li>
+                    
                         <li style="text-decoration: None">
                             <a id="sign_ind_nav" href="/Trip/MyList">List my trips</a>
                         </li>
