--- a/principal/templates/public_trip_details.html
+++ b/principal/templates/public_trip_details.html
@@ -103,14 +103,14 @@
                 <a class="fa fa-star fa-2x text-left" data-toggle="modal" style="text-decoration: None" data-target="#myModal"> <small>{% firstof trip.rating '-' %}</small> / <strong>10</strong></a>
                 <br>
                 <br>
-                {% if user.is_anonymous or perm.administrator %}
+                {% if user.is_anonymous or perms.principal.administrator %}
                     <i class="fa fa-thumbs-o-up fa-2x text-left"> {{trip.likes}} likes</i>
                     <br>
                     <br>
                     <i class="fa fa-thumbs-o-down fa-2x text-right"> {{trip.dislikes}} dislikes</i>
                 {% endif %}
 
-                {% if perms.principal.Traveller %}
+                {% if perms.principal.traveller %}
                     {% if judge == None %}
                         <a href="/judge/{{trip.scorable_ptr_id}}/1">
                             <i class="fa fa-thumbs-o-up fa-2x text-left"> {{trip.likes}} likes</i>
@@ -140,8 +140,6 @@
                         <a href="/judge/{{trip.scorable_ptr_id}}/0">
                             <i class="fa fa-thumbs-down fa-2x text-right"> {{trip.dislikes}} dislikes</i>
                         </a>
-                        <br>
-                        <br>
                     {% endif %}
                 {% endif %}
             </div>
@@ -173,24 +171,38 @@
                 </div>
               </div>
             </div>
-            <div class="well">
-            {% if perms.administrator %}
-                <form id="stateSelectForm" action="/administrator/trip/update/" method="post" class="well">
-                    {% csrf_token %}
-		            <h3>Trip moderation</h3>
+
+            {% if perms.principal.administrator %}
+                <div class="well">
+                    <h3>Trip moderation</h3>
                     <p>Select an option and click save to change the trip status.</p>
-                    
-                    <input type="hidden" name="id" value="{{trip.scorable_ptr_id}}"/>
-                        <select name="state" id="state" class="form-control">
-                            <option value="ap" {% if trip.state == "ap" %} selected="selected" {% endif %} >APPROVED</option>
-		                    <option value="re"  {% if trip.state == "re" %} selected="selected" {% endif %}>REJECTED</option>
-		                    <option value="pe" {% if trip.state == "pe" %}selected="selected" {% endif %}>PENDING</option>
-		                </select>
-		                <br>
-		                <button type="submit" name="save" value="save" onclick="return confirm('Are you sure?')" class="btn btn-block btn-danger">Save</button>
-		                </form>
-	                </div>
-	            
+                    <form class="form-horizontal" role="form" action="/administrator/trip/update/{{ trip.id }}" method="post" data-toggle="validator">
+                        {% csrf_token %}
+                        <div class="form-group {% if form.visible_fields.0.errors %} has-error {% endif %}">
+                            {{ form.visible_fields.0 }}
+                            <div class="help-block with-errors">
+                                {{ form.visible_fields.0.errors }}
+                            </div>
+                        </div>
+                        {% for hidden in form.hidden_fields %}
+                            {{ hidden }}
+                        {% endfor %}
+                        <button type="submit" name="save" value="save" onclick="return confirm('Are you sure?')" class="btn btn-block btn-danger">Save</button>
+                    </form>
+{#                    <form id="stateSelectForm" action="/administrator/trip/update/" method="post" class="well">#}
+{#                        {% csrf_token %}#}
+{#                        <h3>Trip moderation</h3>#}
+{#                        <p>Select an option and click save to change the trip status.</p>#}
+{#                        <input type="hidden" name="id" value="{{trip.scorable_ptr_id}}"/>#}
+{#                        <select name="state" id="state" class="form-control">#}
+{#                            <option value="ap" {% if trip.state == "ap" %} selected="selected" {% endif %} >APPROVED</option>#}
+{#                            <option value="re"  {% if trip.state == "re" %} selected="selected" {% endif %}>REJECTED</option>#}
+{#                            <option value="pe" {% if trip.state == "pe" %}selected="selected" {% endif %}>PENDING</option>#}
+{#                        </select>#}
+{#                        <br>#}
+{#                        <button type="submit" name="save" value="save" onclick="return confirm('Are you sure?')" class="btn btn-block btn-danger">Save</button>#}
+{#                    </form>#}
+                </div>
             {% endif %}
         </div>
     </div>
